# AutoSequentialFrames

./: LICENSE  README.md  VERSION.txt  __init__.py  auto_sequential.py  pyproject.toml
web/: auto_sequential.js  auto_sequential_controller.js
